устранил ошибки для автотеста

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="root">
   <header class="header">
-    <img class="header__logo" href="#" src="images/header-logo.svg" alt="лого">
+    <img class="header__logo" src="images/header-logo.svg" alt="логотип карта России">
     <div class="header__lang-links">
       <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
       <a class="header__lang-link" href="#">En</a>
