--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <figure class="lead__image-conteiner">
+      <figure class="lead__image-container">
         <img class="lead__image" src="images/lead-polka.jpg" alt="человек на полке - маршрут по стране">
         <figcaption class="lead__cuption">ваша полка — верхняя</figcaption>
       </figure>
